# AOI-sys-for-TI

./: .gitignore  LICENSE  README.md
config/lighting/: illumination_profiles.yaml
config/vision-system/: ccd1_top_check.yaml  ccd2_side_check.yaml  ccd3_bottom_check.yaml  ccd4_lighting_check.yaml
docs/: defect-classification.md  mechanical-design.md  process-flow.md  safety-design.md  system-architecture.md  vision-system.md
docs/diagrams/: defect-taxonomy.md  process-flow.md  system-architecture.md
src/: README.md
src/data_types/: defect_types.py
src/global_variables/: system_config.py
src/material_handling/: PitchChanger.py  TransferControl.py
src/ng_management/: NGSorter.py
src/plc/: io_mapping.csv  main_sequence.st  safety_program.st  servo_config.st
src/vision/: DefectDetector.cpp  GigEVisionCapture.cpp  GigEVisionCapture.h  ImagePreprocessor.cpp  ImagePreprocessor.h  OrientationDetector.py  pybind_module.cpp
src/vision/cpp/: CMakeLists.txt  DefectDetector.h  ImagePreprocessor.cpp  pybind_module.cpp
tools/analysis/: defect_classification_tool.py  lighting_check_analysis.py
tools/calibration/: camera_calibration.py
tools/simulation/: inspection_sequence_sim.py  robot_control_sim.py
